修复一些格式和拼写问题

--- a/src/templates/layouts/module.njk
+++ b/src/templates/layouts/module.njk
@@ -203,7 +203,8 @@
                 <div style="display:flex;
                             align-items:center;
                             gap:var(--space-lg);
-                            margin-bottom:var(--space-lg)">
+                            margin-bottom:var(--space-lg);
+                            margin-top:var(--space-lg);">
                     <h2 style="margin:0;">{{ t.module.demo }}</h2>
                     <a class="btn btn-primary"
                        href="https://turbowarp.org/editor?project_url={{ (config.baseUrl + '/modules/' + module.slug + '/demo.sb3') | urlencode }}"
